--- a/Linkedin/index.html
+++ b/Linkedin/index.html
@@ -11,7 +11,7 @@
         <header class="profile-card" aria-label="Tarjeta de perfil">  
             <aside class="profile-aside"> <!-- Foto de perfil --> 
                 <div class="avatar"> 
-                    <img src="/imagen/foto2.JPG" alt="Foto de perfil" /> 
+                    <img src="/Linkedin/imagen/foto.JPG" alt="Foto de perfil" /> 
                 </div> <!-- Datos de contacto --> 
                 <div class="contact-info"> <h1 id="name">Anyela Lucia Anaya Pinto</h1> 
                     <p class="headline">Ingeniera en Telecomunicaciones — Full Stack Developer en Oracle</p> 
